# ctap-hid-fido2

./: Cargo.toml  LICENSE  README.md  README_Authenticator_Config.md  README_Biometric_management.md  README_Credential_management.md  README_Get_Info.md  README_Large_Blob.md  README_Register_and_Authenticate.md  README_Version.md  README_ctapcli.md  Readme-ja.md  ctap-hid-fido2.code-workspace  test_for_pi.sh
.github/workflows/: rust.yml
examples/: getinfo.rs  wink.rs
examples/credential-management/: Cargo.toml  main.rs
examples/credential-management/src/: main.rs
examples/ctapcli/: Cargo.toml  bio.rs  blob.rs  blobs.rs  cfg.rs  common.rs  config.rs  cred.rs  info.rs  main.rs  memo.rs  pin.rs
examples/ctapcli-async/: bio.rs  blob.rs  cfg.rs  common.rs  cred.rs  info.rs  main.rs  memo.rs  pin.rs
examples/ctapcli/src/: bio.rs  common.rs  cred.rs  info.rs  main.rs  memo.rs  pin.rs
examples/get-info/: Cargo.toml  main.rs
examples/get-info-async/: main.rs
examples/get-info/src/: main.rs
examples/nitro/: Cargo.toml  main.rs
examples/nitro-update/: Cargo.toml  main.rs
examples/nitro-update/src/: main.rs
examples/nitro/src/: main.rs
examples/reg-auth/: main.rs
examples/reg-auth-async/: main.rs
examples/selection/: main.rs
examples/selection-async/: main.rs
examples/test-config/: main.rs
examples/test-config-async/: main.rs
examples/test-ctap21/: Cargo.toml
examples/test-ctap21/src/: bio.rs  info.rs  main.rs
examples/test-with-pin-non-rk/: Cargo.toml  main.rs
examples/test-with-pin-non-rk-async/: main.rs
examples/test-with-pin-non-rk/src/: main.rs
examples/test-with-pin-rk/: Cargo.toml  main.rs
examples/test-with-pin-rk-async/: main.rs
examples/test-with-pin-rk/src/: main.rs
examples/wink/: Cargo.toml  main.rs
examples/wink-async/: main.rs
examples/wink/src/: main.rs
src/: auth_data.rs  bio_enrollment.rs  bio_enrollment_command.rs  bio_enrollment_params.rs  bio_enrollment_response.rs  client_pin.rs  client_pin_command.rs  client_pin_response.rs  config_command.rs  cose.rs  credential_management.rs  credential_management_command.rs  credential_management_params.rs  credential_management_response.rs  ctapdef.rs  ctaphid.rs  ctapihd_nitro.rs  enc_aes256_cbc.rs  enc_hmac_sha_256.rs  fidokey.rs  fidokey_pi.rs  get_assertion.rs  get_assertion_command.rs  get_assertion_params.rs  get_assertion_response.rs  get_assertion_with_pin_result.rs  get_info.rs  get_info_command.rs  get_info_params.rs  get_info_response.rs  hid_common.rs  hmac.rs  hmac_ext.rs  lib.rs  make_credential.rs  make_credential_command.rs  make_credential_params.rs  make_credential_response.rs  make_credential_with_pin_non_rk_result.rs  nitro_get_status_params.rs  (+13 more)
src/encrypt/: cose.rs  enc_aes256_cbc.rs  enc_aes256_gcm.rs  enc_hmac_sha_256.rs  p256.rs  shared_secret.rs  shared_secret2.rs
src/fidokey/: common.rs  config.rs  mod.rs  selection.rs  sub_command_base.rs  wink.rs
src/fidokey/authenticator_config/: authenticator_config_command.rs  mod.rs
src/fidokey/bio/: bio_enrollment_command.rs  bio_enrollment_params.rs  bio_enrollment_response.rs  mod.rs
src/fidokey/config/: mod.rs
src/fidokey/credential_management/: credential_management_command.rs  credential_management_params.rs  credential_management_response.rs  mod.rs
src/fidokey/get_assertion/: get_assertion_command.rs  get_assertion_params.rs  get_assertion_response.rs  get_next_assertion_command.rs  mod.rs
src/fidokey/get_info/: get_info_params.rs  get_info_response.rs  mod.rs
src/fidokey/large_blobs/: large_blobs_command.rs  large_blobs_params.rs  large_blobs_response.rs  mod.rs
src/fidokey/make_credential/: make_credential_command.rs  make_credential_params.rs  make_credential_response.rs  mod.rs
src/fidokey/pin/: client_pin.rs  client_pin_command.rs  client_pin_response.rs  mod.rs
src/hid/: mod.rs
tests/: tests.rs
