[package]
name = "ctap-hid-fido2"
version = "3.5.0"
authors = ["gebo <35388172+gebogebogebo@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license="MIT"
description="Rust FIDO2 CTAP library"
repository="https://github.com/gebogebogebo/ctap-hid-fido2"
keywords=["FIDO2","CTAP"]
readme="README.md"

[dependencies]
aes="0.8.1"
anyhow = "1.0"
base64 = "0.22.0"
byteorder = "1.3.4"
cbc = "0.1.2"
hex = "0.4.2"
num = "0.4.0"
pad = "0.1.6"
ring = "0.17.8"
serde = "1.0.126"
serde_cbor = "0.11.1"
strum = "0.26"
strum_macros = "0.26.2"
x509-parser = "0.16.0"

[dependencies.hidapi]
version = "2.6.1"
default-features = false
features=["linux-static-hidraw"]

[dev-dependencies]
clap = { version = "4.1", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4"
rpassword = "7.0"

# Used in ctapcli
[target.'cfg(not(linux))'.dev-dependencies]
clipboard = "0.5.0"

[[example]]
name = "ctapcli"

[[example]]
name = "get-info"

[[example]]
name = "reg-auth"

[[example]]
name = "test-with-pin-non-rk"

[[example]]
name = "test-with-pin-rk"

[[example]]
name = "wink"
