[package]
name = "ctap-hid-fido2"
version = "3.5.6"
authors = ["gebo <35388172+gebogebogebo@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license="MIT"
description="Rust FIDO2 CTAP library"
repository="https://github.com/gebogebogebo/ctap-hid-fido2"
keywords=["FIDO2","CTAP","CTAP2"]
readme="README.md"

[dependencies]
aes="0.8.4"
anyhow = "1.0.100"
base64 = "0.22.1"
byteorder = "1.5.0"
cbc = "0.1.2"
hex = "0.4.3"
num = "0.4.3"
pad = "0.1.6"
ring = "0.17.14"
ciborium = "0.2.2"
strum = "0.27.2"
strum_macros = "0.27.2"
x509-parser = "0.18.0"
rand = "0.9.2"

[dependencies.hidapi]
version = "2.6.3"
default-features = false
features=["linux-static-hidraw"]

[dev-dependencies]
clap = { version = "4.5.52", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
rpassword = "7.4.0"
arboard = "3.6.1"
colored = "3.0.0"

[[example]]
name = "ctapcli"

[[example]]
name = "get-info"

[[example]]
name = "reg-auth"

[[example]]
name = "test-with-pin-non-rk"

[[example]]
name = "test-with-pin-rk"

[[example]]
name = "wink"

[[example]]
name = "test-config"

[[example]]
name = "selection"
