[package]
name = "ctapcli"
version = "0.0.5"
authors = ["gebo <gebogebogeboge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctap-hid-fido2 = { path = "../.." }
clap = "2.33.3"
anyhow = "1.0"
clipboard = "0.5.0"
