[package]
name = "nitro-update"
version = "0.1.0"
authors = ["gebo <35388172+gebogebogebo@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctap-hid-fido2 = { path = "../.." }
anyhow = "1.0"
serde_json = "1.0.64"
ihex = "3.0"
base64 = "0.13.0"