[package]
name = "test-with-pin-rk"
version = "0.1.0"
authors = ["gebo <35388172+gebogebogebo@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctap-hid-fido2 = { path = "../.." }
anyhow = "1.0"


